# paramdb

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  github-pages.yml  publish.yml
docs/: Makefile  api-reference.md  conf.py  database.md  index.md  parameter-data.md  usage.md
docs/_static/: jupyter-sphinx.css
docs/source/: conf.py  index.md
docs/source/development/: code-of-conduct.md  dependency-management.md  documentation-website.md  environment-setup.md  project-design.md
paramdb/: __init__.py  _database.py  _exceptions.py  _keys.py  _param_data.py  _param_data_mixins.py  test.py
paramdb/_param_data/: __init__.py  _collections.py  _dataclasses.py  _files.py  _mixins.py  _param_data.py  _primitives.py  _type_mixins.py
tests/: conftest.py  helpers.py  param_data.py  test_database.py  test_param_data.py  test_param_data_mixins.py
tests/_param_data/: test_collections.py  test_dataclasses.py  test_files.py  test_param_data.py  test_primitives.py
