[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "paramdb"
version = "0.10.1"
description = "Python package for storing and retrieving experiment parameters."
authors = ["Alex Hadley <contact@alexhadley.net>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/PainterQubits/paramdb"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
typing-extensions = "^4.8.0"
sqlalchemy = "^2.0.23"
zstandard = "^0.22.0"
astropy = {version = "^5.3.4", optional = true}

[tool.poetry.extras]
astropy = ["astropy"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
pylint = "^3.0.2"
mypy = "^1.6.1"
black = "^23.10.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
myst-parser = "^2.0.0"
furo = "^2023.9.10"
sphinx-copybutton = "^0.5.2"
jupyter-sphinx = "^0.4.0"
ipykernel = "^6.26.0"
sphinx-autobuild = "^2021.3.14"

[tool.mypy]
strict = true

[tool.pylint.basic]
good-names-rgxs = ["^[a-z][a-z0-9]?$"]

[tool.pylint.messages_control]
disable = ["too-few-public-methods"]

[tool.pylint.typecheck]
ignored-classes = ["sqlalchemy.orm.session.sessionmaker"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
