[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "paramdb"
version = "0.11.0"
description = "Python package for storing and retrieving experiment parameters."
authors = ["Alex Hadley <contact@alexhadley.net>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/PainterQubits/paramdb"

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.9.0"
sqlalchemy = "^2.0.25"
zstandard = "^0.22.0"
astropy = { version = "^6.0.0", optional = true }

[tool.poetry.extras]
astropy = ["astropy"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
flake8 = "^7.0.0"
pylint = "^3.0.3"
black = "^24.1.1"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
myst-parser = "^2.0.0"
furo = "^2024.1.29"
sphinx-copybutton = "^0.5.2"
jupyter-sphinx = "^0.5.3"
ipykernel = "^6.29.0"
sphinx-autobuild = "^2021.3.14"

[tool.mypy]
strict = true

[tool.pylint.basic]
good-names-rgxs = ["^[a-z][a-z0-9]?$"]

[tool.pylint.messages_control]
disable = ["too-few-public-methods"]

[tool.pylint.typecheck]
ignored-classes = ["sqlalchemy.orm.session.sessionmaker"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
